bug 1346961 draw opaque scrollbar background on outermost scrollbar element even for GTK versions >= 3.20 r=jhorak+328198

MozReview-Commit-ID: BHsD1h4UQbs